// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Stack] navigator should renders [Dark] mode 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#232323",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "backgroundColor": "#232323",
                  "borderBottomColor": "#D3D8E8",
                  "flex": 1,
                  "shadowColor": "#D3D8E8",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            nativeID="animatedComponent"
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  nativeID="animatedComponent"
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "#D3D8E8",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  Intro
                </Text>
              </View>
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#232323",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#232323",
                                "flexBasis": 0,
                                "flexDirection": "column",
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "justifyContent": "flex-start",
                                "overflow": "hidden",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "column",
                                  "height": "100%",
                                  "justifyContent": "flex-start",
                                  "width": "100%",
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#D3D8E8",
                                    "fontSize": 18,
                                    "lineHeight": 27,
                                  },
                                  Object {
                                    "marginTop": 100,
                                  },
                                ]
                              }
                            >
                              
                            </Text>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#D3D8E8",
                                    "fontSize": 18,
                                    "lineHeight": 27,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              
                            </Text>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#D3D8E8",
                                    "fontSize": 18,
                                    "lineHeight": 27,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              
                            </Text>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "alignSelf": "center",
                                  "bottom": 40,
                                  "flexDirection": "column",
                                  "position": "absolute",
                                  "width": "75%",
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              accessibilityState={
                                Object {
                                  "disabled": false,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              nativeID="animatedComponent"
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                              testID="btn-login"
                            >
                              <View
                                onLayout={[Function]}
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#8A96DC",
                                      "borderBottomColor": "#8A96DC",
                                      "borderLeftColor": "#8A96DC",
                                      "borderRightColor": "#8A96DC",
                                      "borderTopColor": "#8A96DC",
                                    },
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "alignSelf": "stretch",
                                        "borderBottomLeftRadius": 20,
                                        "borderBottomRightRadius": 20,
                                        "borderTopLeftRadius": 20,
                                        "borderTopRightRadius": 20,
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingBottom": 10,
                                        "paddingLeft": 20,
                                        "paddingRight": 20,
                                        "paddingTop": 10,
                                      },
                                      Array [
                                        undefined,
                                        false,
                                        undefined,
                                      ],
                                    ],
                                  ]
                                }
                                testID="button-container"
                                type="primary"
                              >
                                <Image
                                  source={
                                    Object {
                                      "createTransformer": [Function],
                                    }
                                  }
                                  style={
                                    Object {
                                      "height": 24,
                                      "left": 12,
                                      "position": "absolute",
                                      "width": 24,
                                    }
                                  }
                                />
                                <Text
                                  outlined={false}
                                  style={
                                    Array [
                                      Object {
                                        "color": "#000000",
                                      },
                                      Array [
                                        undefined,
                                        undefined,
                                      ],
                                    ]
                                  }
                                  type="primary"
                                >
                                  Sign In
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "marginTop": 8,
                                }
                              }
                            />
                            <View
                              accessibilityState={
                                Object {
                                  "disabled": false,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              nativeID="animatedComponent"
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                              testID="btn-navigate"
                            >
                              <View
                                onLayout={[Function]}
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#8A96DC",
                                      "borderBottomColor": "#8A96DC",
                                      "borderLeftColor": "#8A96DC",
                                      "borderRightColor": "#8A96DC",
                                      "borderTopColor": "#8A96DC",
                                    },
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "alignSelf": "stretch",
                                        "borderBottomLeftRadius": 20,
                                        "borderBottomRightRadius": 20,
                                        "borderTopLeftRadius": 20,
                                        "borderTopRightRadius": 20,
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingBottom": 10,
                                        "paddingLeft": 20,
                                        "paddingRight": 20,
                                        "paddingTop": 10,
                                      },
                                      Array [
                                        undefined,
                                        false,
                                        undefined,
                                      ],
                                    ],
                                  ]
                                }
                                testID="button-container"
                                type="primary"
                              >
                                <Text
                                  outlined={false}
                                  style={
                                    Array [
                                      Object {
                                        "color": "#000000",
                                      },
                                      Array [
                                        undefined,
                                        undefined,
                                      ],
                                    ]
                                  }
                                  type="primary"
                                >
                                  Navigate
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "marginTop": 8,
                                }
                              }
                            />
                            <View
                              accessibilityState={
                                Object {
                                  "disabled": false,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              nativeID="animatedComponent"
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                              testID="btn-theme"
                            >
                              <View
                                onLayout={[Function]}
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#8A96DC",
                                      "borderBottomColor": "#8A96DC",
                                      "borderLeftColor": "#8A96DC",
                                      "borderRightColor": "#8A96DC",
                                      "borderTopColor": "#8A96DC",
                                    },
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "alignSelf": "stretch",
                                        "borderBottomLeftRadius": 20,
                                        "borderBottomRightRadius": 20,
                                        "borderTopLeftRadius": 20,
                                        "borderTopRightRadius": 20,
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingBottom": 10,
                                        "paddingLeft": 20,
                                        "paddingRight": 20,
                                        "paddingTop": 10,
                                      },
                                      Array [
                                        undefined,
                                        false,
                                        undefined,
                                      ],
                                    ],
                                  ]
                                }
                                testID="button-container"
                                type="primary"
                              >
                                <Text
                                  outlined={false}
                                  style={
                                    Array [
                                      Object {
                                        "color": "#000000",
                                      },
                                      Array [
                                        undefined,
                                        undefined,
                                      ],
                                    ]
                                  }
                                  type="primary"
                                >
                                  Change Theme
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`[Stack] navigator should renders without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "#000000",
                  "flex": 1,
                  "shadowColor": "#000000",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            nativeID="animatedComponent"
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  nativeID="animatedComponent"
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "#000000",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  Intro
                </Text>
              </View>
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              nativeID="animatedComponent"
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#FFFFFF",
                                "flexBasis": 0,
                                "flexDirection": "column",
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "justifyContent": "flex-start",
                                "overflow": "hidden",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "column",
                                  "height": "100%",
                                  "justifyContent": "flex-start",
                                  "width": "100%",
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#000000",
                                    "fontSize": 18,
                                    "lineHeight": 27,
                                  },
                                  Object {
                                    "marginTop": 100,
                                  },
                                ]
                              }
                            >
                              
                            </Text>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#000000",
                                    "fontSize": 18,
                                    "lineHeight": 27,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              
                            </Text>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#000000",
                                    "fontSize": 18,
                                    "lineHeight": 27,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              
                            </Text>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "alignSelf": "center",
                                  "bottom": 40,
                                  "flexDirection": "column",
                                  "position": "absolute",
                                  "width": "75%",
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              accessibilityState={
                                Object {
                                  "disabled": false,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              nativeID="animatedComponent"
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                              testID="btn-login"
                            >
                              <View
                                onLayout={[Function]}
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#393D7A",
                                      "borderBottomColor": "#393D7A",
                                      "borderLeftColor": "#393D7A",
                                      "borderRightColor": "#393D7A",
                                      "borderTopColor": "#393D7A",
                                    },
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "alignSelf": "stretch",
                                        "borderBottomLeftRadius": 20,
                                        "borderBottomRightRadius": 20,
                                        "borderTopLeftRadius": 20,
                                        "borderTopRightRadius": 20,
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingBottom": 10,
                                        "paddingLeft": 20,
                                        "paddingRight": 20,
                                        "paddingTop": 10,
                                      },
                                      Array [
                                        undefined,
                                        false,
                                        undefined,
                                      ],
                                    ],
                                  ]
                                }
                                testID="button-container"
                                type="primary"
                              >
                                <Image
                                  source={
                                    Object {
                                      "createTransformer": [Function],
                                    }
                                  }
                                  style={
                                    Object {
                                      "height": 24,
                                      "left": 12,
                                      "position": "absolute",
                                      "width": 24,
                                    }
                                  }
                                />
                                <Text
                                  outlined={false}
                                  style={
                                    Array [
                                      Object {
                                        "color": "#D3D8E8",
                                      },
                                      Array [
                                        undefined,
                                        undefined,
                                      ],
                                    ]
                                  }
                                  type="primary"
                                >
                                  Sign In
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "marginTop": 8,
                                }
                              }
                            />
                            <View
                              accessibilityState={
                                Object {
                                  "disabled": false,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              nativeID="animatedComponent"
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                              testID="btn-navigate"
                            >
                              <View
                                onLayout={[Function]}
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#393D7A",
                                      "borderBottomColor": "#393D7A",
                                      "borderLeftColor": "#393D7A",
                                      "borderRightColor": "#393D7A",
                                      "borderTopColor": "#393D7A",
                                    },
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "alignSelf": "stretch",
                                        "borderBottomLeftRadius": 20,
                                        "borderBottomRightRadius": 20,
                                        "borderTopLeftRadius": 20,
                                        "borderTopRightRadius": 20,
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingBottom": 10,
                                        "paddingLeft": 20,
                                        "paddingRight": 20,
                                        "paddingTop": 10,
                                      },
                                      Array [
                                        undefined,
                                        false,
                                        undefined,
                                      ],
                                    ],
                                  ]
                                }
                                testID="button-container"
                                type="primary"
                              >
                                <Text
                                  outlined={false}
                                  style={
                                    Array [
                                      Object {
                                        "color": "#D3D8E8",
                                      },
                                      Array [
                                        undefined,
                                        undefined,
                                      ],
                                    ]
                                  }
                                  type="primary"
                                >
                                  Navigate
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "marginTop": 8,
                                }
                              }
                            />
                            <View
                              accessibilityState={
                                Object {
                                  "disabled": false,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              nativeID="animatedComponent"
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                              testID="btn-theme"
                            >
                              <View
                                onLayout={[Function]}
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#393D7A",
                                      "borderBottomColor": "#393D7A",
                                      "borderLeftColor": "#393D7A",
                                      "borderRightColor": "#393D7A",
                                      "borderTopColor": "#393D7A",
                                    },
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "alignSelf": "stretch",
                                        "borderBottomLeftRadius": 20,
                                        "borderBottomRightRadius": 20,
                                        "borderTopLeftRadius": 20,
                                        "borderTopRightRadius": 20,
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingBottom": 10,
                                        "paddingLeft": 20,
                                        "paddingRight": 20,
                                        "paddingTop": 10,
                                      },
                                      Array [
                                        undefined,
                                        false,
                                        undefined,
                                      ],
                                    ],
                                  ]
                                }
                                testID="button-container"
                                type="primary"
                              >
                                <Text
                                  outlined={false}
                                  style={
                                    Array [
                                      Object {
                                        "color": "#D3D8E8",
                                      },
                                      Array [
                                        undefined,
                                        undefined,
                                      ],
                                    ]
                                  }
                                  type="primary"
                                >
                                  Change Theme
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
